--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>BIRTHDAY CALCULATOR</h1>
+    <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
 </body>
 </html>
