--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>BIRTHDAY CALCULATOR</h1>
-    <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
-    <button>START NOW</button>
+    <div class="section1">
+        <h1>BIRTHDAY CALCULATOR</h1>
+        <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
+        <button>START NOW</button>
+    </div>
 </body>
 </html>
