--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img class="image1" src="./images/bunny.png" alt="bunny">
     <div class="section1">
         <h1>BIRTHDAY CALCULATOR</h1>
         <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
