style section one

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="image1" src="./images/bunny.png" alt="bunny">
-    <div class="section1">
-        <h1>BIRTHDAY CALCULATOR</h1>
-        <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
-        <button>START NOW</button>
+    <div class="first">
+        <div class="section1">
+            <img class="image1" src="./images/bunny.png" alt="bunny">
+            <div class="h1h2">
+                <h1>BIRTHDAY CALCULATOR</h1>
+                <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
+                <button>START NOW</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
