--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             <img class="image1" src="./images/bunny.png" alt="bunny">
             <div class="h1h2">
                 <h1>BIRTHDAY CALCULATOR</h1>
-                <h2>This is an application where, users put in their birthday <br> and it calculates the day of the week they were born. </h2>
+                <h2>This is an application where, <br> users put in their birthday <br> and it calculates the day of <br> the week they were born. </h2>
                 <button>START NOW</button>
             </div>
+            <img class="image2"src="./images/twin.jpg" alt="twin">
         </div>
     </div>
 </body>
