create a form and style it

--- a/names.html
+++ b/names.html
@@ -1,10 +1,24 @@
-<form class="akan">
-    <input type="text" placeholder="Enter your full name">
-    <input type="text" placeholder="Date of birth">
-    <input type="text" placeholder="Month">
-    <input type="text" placeholder="Year">
-    <input type="text" placeholder="Choose your gender"> 
-</form>
-<a href="response.html">
-    <button>SUBMIT</button>
-</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>form</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="details-input">
+        <div class="details">
+            <form class="akan">
+                <input type="text" placeholder="Enter your full name">
+                <input type="text" placeholder="Date of birth">
+                <input type="text" placeholder="Month">
+                <input type="text" placeholder="Year">
+                <input type="text" placeholder="Choose your gender"> 
+                <button>SUBMIT</button>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
