--- a/names.html
+++ b/names.html
@@ -8,16 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="details-input">
-        <div class="details">
-            <form class="akan">
-                <input type="text" placeholder="Enter your full name">
-                <input type="text" placeholder="Date of birth">
-                <input type="text" placeholder="Month">
-                <input type="text" placeholder="Year">
-                <input type="text" placeholder="Choose your gender"> 
-                <button>SUBMIT</button>
-            </form>
+    <div class="second-page">
+        <div class="second-page-2">
+            <div class="details-input">
+                <div class="img1">
+                    <img height="110vh" src="./images/girly.png" alt="">
+                </div>
+            </div>
+            <div class="details-input">
+                <div class="details">
+                    <form class="akan">
+                        <input type="text" placeholder="Enter your full name">
+                        <input type="text" placeholder="Date of birth">
+                        <input type="text" placeholder="Month">
+                        <input type="text" placeholder="Year">
+                        <input type="text" placeholder="Choose your gender"> 
+                        <button>SUBMIT</button>
+                    </form>
+                </div>
+            </div>
+            <div class="details-input">
+                <div class="img2">
+                    <img height="90vh" src="./images/boy.jpg" alt="">
+                </div>
+            </div>
         </div>
     </div>
 </body>
