add id to input

--- a/names.html
+++ b/names.html
@@ -13,11 +13,11 @@
             <div class="details-input">
                 <div class="details">
                     <form class="akan">
-                        <input type="text" placeholder="Enter your full name">
-                        <input type="text" placeholder="Date of birth">
-                        <input type="text" placeholder="Month">
-                        <input type="text" placeholder="Year">
-                        <input type="text" placeholder="Choose your gender"> 
+                        <input id="name" type="text" placeholder="Enter your full name">
+                        <input id="date" type="number" placeholder="Date of birth">
+                        <input id="month" type="number" placeholder="Month">
+                        <input id="year" type="number" placeholder="Year">
+                        <input placeholder="Choose your gender"> 
                         <button>SUBMIT</button>
                     </form>
                 </div>
