add variables for function

--- a/names.html
+++ b/names.html
@@ -17,7 +17,9 @@
                         <input id="date" type="number" placeholder="Date of birth">
                         <input id="month" type="number" placeholder="Month">
                         <input id="year" type="number" placeholder="Year">
-                        <input placeholder="Choose your gender"> 
+                        <p>Choose your gender</p>
+                        <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender">Male
+                        <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender">Female
                         <button>SUBMIT</button>
                     </form>
                 </div>
