script:call submit button

--- a/names.html
+++ b/names.html
@@ -12,15 +12,15 @@
         <div class="second-page-2">
             <div class="details-input">
                 <div class="details">
-                    <form class="akan">
+                    <form name="myform" class="akan">
                         <input id="name" type="text" placeholder="Enter your full name">
                         <input id="date" type="number" placeholder="Date of birth">
                         <input id="month" type="number" placeholder="Month">
                         <input id="year" type="number" placeholder="Year">
                         <p>Choose your gender</p>
-                        <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender">Male
-                        <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender">Female
-                        <button>SUBMIT</button>
+                        <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender" value="Male">Male
+                        <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender" value="Female">Female
+                        <button id="submission">SUBMIT</button>
                     </form>
                 </div>
             </div>
