add class for response and style it

--- a/names.html
+++ b/names.html
@@ -12,15 +12,15 @@
         <div class="second-page-2">
             <div class="details-input">
                 <div class="details">
-                    <form name="myform" class="akan">
+                    <form id="formOne" name="myform" class="akan">
                         <input id="name" type="text" placeholder="Enter your full name">
-                        <input id="date" type="number" placeholder="Date of birth">
-                        <input id="month" type="number" placeholder="Month">
-                        <input id="year" type="number" placeholder="Year">
+                        <input id="date" type="date" placeholder="Date of birth">
                         <p>Choose your gender</p>
                         <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender" value="Male">Male
                         <input id="gender" placeholder="Choose your gender"type = "radio" name = "gender" value="Female">Female
                         <button id="submission">SUBMIT</button>
+                        <div class="emptyy" id="empty">
+                        </div>
                     </form>
                 </div>
             </div>
