change image size

--- a/names.html
+++ b/names.html
@@ -26,7 +26,7 @@
             </div>
             <div class="details-input">
                 <div class="img1">
-                    <img height="40git add0vh" src="./images/ghana.jpg" alt="">
+                    <img height="400vh" src="./images/ghana.jpg" alt="">
                 </div>
             </div>
         </div>
